# nozomio-hackathon

./: .deployignore  .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  runmcpserver.sh  runmcpserver_http.sh  skills-lock.json  vercel.json
anygpu/: __init__.py  cli.py  config.py  crucible.py  crucible_api.py  crucible_mcp.py  crucible_store.py  crucible_web.py  crucible_web_bridge.py  domain.py  gateway.py  insforge_compute.py  modal_rl_executor.py  nia.py  provider.py  public_mcp_access.py  runtime.py  state.py  tensorlake_sandbox.py
experiments/: README.md  audit_rl_result.py  modal_rl_smoke.py  provider_price_check.py  rl_run_status.py  skypilot_rl_smoke.yaml
insforge/: README.md
launch-video/: package-lock.json  package.json
mcp_server/: deploy.py  models.py  monitor.py  requirements.txt  server.py
migrations/: 20260509223934_crucible-schema.sql
tests/: test_audit_rl_result.py  test_cli_flow.py  test_crucible_api.py  test_crucible_backend.py  test_crucible_mcp.py  test_crucible_mcp_modal_execution.py  test_crucible_web.py  test_docker_provider.py  test_fastmcp_crucible_tools.py  test_gateway.py  test_insforge_compute_addons.py  test_insforge_live_flow.py  test_kubernetes_inventory.py  test_kubernetes_manifest.py  test_lambda_provider.py  test_local_runtime.py  test_mcp_server_gateway_endpoint.py  test_mcp_server_provider_fetchers.py  test_modal_rl_executor.py  test_modal_rl_smoke.py  test_nia_integration.py  test_provider_broker.py  test_provider_price_check.py  (+5 more)
(+104 files in other folders)
