[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anygpu-local"
version = "0.1.0"
description = "Local AnyGPU production-flow control-plane prototype"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "asyncssh>=2.14.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
    "tensorlake>=0.5.9",
]

[project.scripts]
anygpu = "anygpu.cli:main"

[tool.setuptools.packages.find]
include = ["anygpu*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
